plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencyManagement {
	imports {
		mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:3.1.1"
	}
}

dependencies {
	// Spring Boot Starters
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Database Drivers
	runtimeOnly 'com.mysql:mysql-connector-j'

	// Test Dependencies
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'com.h2database:h2'
	// testImplementation
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// OpenAPI / Swagger UI
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.9'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// AWS S3
	implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'
	implementation 'software.amazon.awssdk:s3'

	// AOP
	implementation("org.springframework.boot:spring-boot-starter-aop")

	// Redisson
	implementation 'org.redisson:redisson:3.50.0'
}

tasks.named('test') {
	useJUnitPlatform()
}

jar {
	enabled = false
}